grammar.js
    source_file: ($) => repeat(choice($._top_item, $._newline)),

    _top_item: ($) =>
      choice(
        $.procedure_def,
        $.type_def,
        $.package_directive,
        $.module_import,
        $.module_export,
        $.validation_block,
        $.agent_directive,
        $.adapter_directive,
        $.model_directive,
        $.effort_directive,
        $.approval_directive,
        $.hooks_directive,
        $.history_directive,
        $.skills_directive,
        $.codemode_directive,
        $.requires_directive,
        $.budget_directive,
        $.system_directive,
        $.mcp_directive,
        $.settings_directive,
        $.artifacts_directive,
        $.profile_directive,
        $.use_directive,
        $.task_stmt,
        $.send_stmt,
        $.await_stmt,
        $.task_group_stmt,
        $.variable_init_stmt,
        $.assignment_stmt,
        $.if_stmt,
        $.else_clause,
        $.loop_stmt,
        $.map_clause,
        $.conditional_loop_stmt,
        $.variable_init_block_stmt,
        $.assignment_block_stmt,
        $.raw_invoke_stmt,
        $.show_stmt,
        $.return_stmt,
        $.return_block_stmt,
        $.python_block,
        $.backtick_line_stmt,
        $.template_block_stmt,
        $.template_line,
      ),

    procedure_def: ($) =>
      seq(
        "@",
        field("name", $.identifier),
        "(",
        optional(field("params", $.param_list)),
        ")",
        optional(seq("->", field("return_type", $.type_expr))),
        ":",
        $._newline,
        field("body", $.block),
      ),

    param_list: ($) => sep1($.param, ","),

    param: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_expr))),
        optional(seq("=", field("default", $.inline_python_expr))),
      ),

    block: ($) =>
      seq($._indent, repeat1(choice($._stmt, $._newline)), $._dedent),

    _stmt: ($) =>
      choice(
        $.procedure_def,
        $.type_def_stmt,
        $.auto_directive,
        $.optimize_directive,
        $.tool_directive,
        $.agent_directive,
        $.adapter_directive,
        $.model_directive,
        $.effort_directive,
        $.approval_directive,
        $.hooks_directive,
        $.history_directive,
        $.skills_directive,
        $.codemode_directive,
        $.requires_directive,
        $.budget_directive,
        $.system_directive,
        $.mcp_directive,
        $.settings_directive,
        $.artifacts_directive,
        $.use_directive,
        $.task_stmt,
        $.send_stmt,
        $.await_stmt,
        $.task_group_stmt,
        $.variable_init_stmt,
        $.assignment_stmt,
        $.if_stmt,
        $.else_clause,
        $.loop_stmt,
        $.map_clause,
        $.conditional_loop_stmt,
        $.variable_init_block_stmt,
        $.assignment_block_stmt,
        $.raw_invoke_stmt,
        $.show_stmt,
        $.return_stmt,
        $.return_block_stmt,
        $.python_block,
        $.backtick_line_stmt,
        $.template_block_stmt,
        $.template_line,
      ),

    type_def: ($) =>
      seq(
        "~",
        field("name", $.identifier),
        "(",
        optional(field("fields", $.type_field_list)),
        ")",
        $._newline,
      ),

    type_field_list: ($) => sep1($.type_field, ","),

    type_field: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_expr))),
        optional(seq("=", field("default", $.inline_python_expr))),
      ),

    // ============================================================
    // Type expressions
    //
    // Grammar order: type_python (backtick escape hatch) > type_union >
    // type_apply / type_ref. Left-associative `|` for unions.
    // ============================================================
    type_expr: ($) => choice($.type_python, $._type_expr_term),

    _type_expr_term: ($) => choice($.type_union, $.type_apply, $.type_ref),

    type_union: ($) =>
      prec.left(
        1,
        seq(field("left", $._type_expr_term), "|", field("right", $._type_expr_term)),
      ),

    type_apply: ($) =>
      seq(
        field("name", $.identifier),
        "[",
        field("args", sep1($.type_arg, ",")),
        "]",
      ),

    type_ref: ($) => field("name", $.identifier),

    type_python: ($) => seq("`", field("code", $.python_inline_body), "`"),

    show_stmt: ($) =>
      seq(
        ">", "show", ":",
        field("value", choice($.inline_python_expr, $.template_expr)),
        $._newline,
      ),

    return_stmt: ($) =>
      seq(
        "=",
        field("value", choice($.inline_python_expr, $.template_expr)),
        $._newline,
      ),

    backtick_line_stmt: ($) => seq($.inline_python_expr, $._newline),

    // ============================================================
    // Deterministic control flow
    // ============================================================
    task_stmt: ($) =>
      seq(
        ">", "task", "[", field("binder", $.identifier), "]", ":",
        field("subagent", $.identifier), ":", $._newline,
        field("body", $.task_body),
      ),

    task_body: ($) =>
      seq(
        $._indent,
        field("template", $.template_block_stmt),
        repeat(choice(field("extra_template", $.template_block_stmt), $.template_blank_line)),
        $._dedent,
      ),

    await_stmt: ($) =>
      seq(
        ">", "await",
        optional(seq("[", field("binder", $.identifier), "]")),
        ":", field("handle", $.identifier), $._newline,
      ),

    send_stmt: ($) =>
      seq(
        ">", field("operation", choice("send", "interrupt")), ":",
        field("handle", $.identifier), ":", $._newline,
        field("body", $.task_body),
      ),

    task_group_stmt: ($) =>
      seq(">", "task_group", ":", $._newline, field("body", $.task_group_body)),

    task_group_body: ($) =>
      seq($._indent, repeat1(choice($.task_group_arm, $._newline)), $._dedent),

    task_group_arm: ($) =>
      seq(field("wait", $.await_stmt), optional(field("process", $.process_clause))),

    process_clause: ($) =>
      seq(">", "process", ":", $._newline, field("body", $.block)),

    python_block: ($) =>
      seq("```", $._fenced_newline, field("code", $.python_code), "```", $._newline),

    return_block_stmt: ($) =>
      seq(
        "=",
        "```",
        $._fenced_newline,
        field("code", $.python_code),
        "```",
        $._newline,
      ),

    python_code: ($) => $._fenced_body,

    // ============================================================
    // Template lines and segments
    // ============================================================
    // `>>` opens a template block. Continuation rows at the same indent
    // (no leading `>>`) are part of that block until a non-template
    // statement or a new `>>` line. Bare template_line outside a block
    // is invalid at procedure/top level and inside `> optimize:`.
    // Only `> auto:` accepts bare rows as its code-generation specification.
    template_block_stmt: ($) =>
      seq(
        ">>",
        field("head", $.template_prompt_expr),
        $._newline,
        repeat(
          seq(
            repeat($.template_blank_line),
            field("continuation", $.template_prompt_expr),
            $._newline,
          ),
        ),
      ),

    // A physical blank row within a `>>` block remains part of the prompt.
    // Keeping it named lets the AST layer preserve `A\n\nB` exactly while
    // still distinguishing it from statement indentation and comments.
    template_line: ($) => seq($.template_expr, $._newline),

    // In an initialization, assignment, or return a sole `python` expression remains a
    // native value. Bare expressions therefore enter a regular template
    // expression only alongside another segment. `>>` and `<<` have an
    // unambiguous prompt introducer and use template_prompt_expr instead.
    template_expr: ($) =>
      choice(
        repeat1(
          choice(
            $.input_segment,
            $.call_segment,
            $.python_expr_segment,
            $.output_segment,
            $.text_segment,
          ),
        ),
        seq(
          repeat1(
            choice(
              $.input_segment,
              $.call_segment,
              $.python_expr_segment,
              $.output_segment,
              $.text_segment,
            ),
          ),
          $.inline_python_expr,
          repeat($._segment),
        ),
        seq($.inline_python_expr, repeat1($._segment)),
      ),

    template_prompt_expr: ($) => repeat1($._segment),

    // Claim conditions share Kedi's native template vocabulary, except
    // bare inline Python. Dynamic Python values must use `<`expr`>` so
    // their position in the rendered claim is explicit. Output segments
    // remain parseable here so the AST layer can report the precise
    // K-CONDITION-OUTPUT diagnostic instead of a generic ERROR.
    _segment: ($) =>
      choice(
        $.input_segment,
        $.call_segment,
        $.python_expr_segment,
        $.inline_python_expr,
        $.output_segment,
        $.text_segment,
      ),

    text_segment: ($) => $._text,

    input_segment: ($) => seq("<", field("name", $.identifier), ">"),

    call_segment: ($) =>
      seq(
        "<",
        field("name", $.identifier),
        "(",
        optional(field("args", $.call_arg_list)),
        ")",
        ">",
      ),

    call_arg_list: ($) => sep1($.call_arg, ","),

    // Call arguments are either a single pure `python_expr` (passed as a
    // native Python value) or a "mini template" (rendered to a string at
    // call time). The mini-template form lets users embed `<inputs>` and
    // `[outputs]` and arbitrary text inside an argument — this matches
    // the legacy parser, which calls `parse_segments` on each comma-
    // separated argument and supports the full segment vocabulary.
    call_arg: ($) => choice($.inline_python_expr, $.template_arg),

    template_arg: ($) =>
      repeat1(
        choice(
          $.input_segment,
          $.output_segment,
          $.call_segment,
          $.python_expr_segment,
          $.text_in_call_segment,
        ),
      ),

    text_in_call_segment: ($) => $._text_in_call,

    output_segment: ($) =>
      seq(
        "[",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type_expr))),
        "]",
      ),

    python_expr_segment: ($) => seq("<", $.inline_python_expr, ">"),

    // ============================================================
    // Directives inside procedure bodies
    //
    //   > auto:
    //     <indented free-text spec for an AI-generated procedure>
    //
    //   > optimize: <name>:
    //     >> <template block for prompt optimisation>
    //
    // The `auto` body is a sequence of plain text lines (the prompt
    // text). The `optimize` body is one explicit template block;
    // the GEPA optimizer can rewrite that span's prompt.
    // ============================================================
    system_directive: ($) =>
      choice(
        seq(
          ">",
          "system",
          ":",
          optional(/[ \t]+/),
          field("head", $.system_expr),
          $._newline,
        ),
        seq(">", "system", ":", $._newline, field("body", $.system_body)),
      ),

    system_body: ($) =>
      seq(
        $._indent,
        repeat1(choice($.system_line, $._newline)),
        $._dedent,
      ),

    system_line: ($) => seq(field("line", $.system_expr), $._newline),

    system_expr: ($) => repeat1($._system_segment),

    _system_segment: ($) => choice($.system_angle_segment, $.text_segment),

    system_angle_segment: ($) => $._system_angle_segment,

    profile_directive: ($) =>
      seq(
        ">",
        "profile",
        ":",
        field("name", $.identifier),
        ":",
        $._newline,
        field("body", $.profile_body),
      ),

    profile_body: ($) =>
      seq(
        $._indent,
        repeat1(choice($.agent_directive, $.adapter_directive, $.model_directive, $.effort_directive, $.approval_directive, $.hooks_directive, $.history_directive, $.skills_directive, $.codemode_directive, $.requires_directive, $.budget_directive, $.system_directive, $.mcp_directive, $.settings_directive, $.artifacts_directive, $.output_directive, $.subagent_directive, $.max_agents_directive, $.workflow_directive, $.use_directive, $._newline)),
        $._dedent,
      ),

    validation_block: ($) =>
      seq(
        "@",
        field("kw", alias($.identifier, $.validation_keyword)),
        ":",
        field("procedure", $.identifier),
        ":",
        $._newline,
        field("body", $.validation_body),
      ),

    validation_body: ($) =>
      seq(
        $._indent,
        repeat1(
          choice($.test_case, $.eval_data, $.eval_test_data, $.eval_metric, $._newline),
        ),
        $._dedent,
      ),

    test_case: ($) =>
      seq(
        ">",
        "case",
        ":",
        field("name", $.identifier),
        ":",
        $._newline,
        field("code", $.test_case_body),
      ),

    test_case_body: ($) =>
      seq(
        $._indent,
        choice($.backtick_line_stmt, $.python_block),
        $._dedent,
      ),

    eval_data: ($) =>
      seq(
        ">",
        "data",
        ":",
        field("name", $.identifier),
        ":",
        $._newline,
        field("body", $.eval_entry_body),
      ),

    eval_test_data: ($) =>
      seq(
        ">",
        "test_data",
        ":",
        field("name", $.identifier),
        ":",
        $._newline,
        field("body", $.eval_entry_body),
      ),

    eval_metric: ($) =>
      seq(
        ">",
        "metric",
        ":",
        field("name", $.identifier),
        optional(seq("(", field("dataset", $.identifier), ")")),
        ":",
        $._newline,
        field("body", $.eval_entry_body),
      ),

    eval_entry_body: ($) =>
      seq(
        $._indent,
        choice($.return_stmt, $.return_block_stmt),
        $._dedent,
      ),

    // ============================================================
    // Lexical
    // ============================================================
    inline_python_expr: ($) => seq("`", field("code", $.python_inline_body), "`"),

    // Body of a backtick-delimited expression. Stops at the first
    // unescaped backtick. Backslash escapes (e.g. `\\\``) are consumed as
    // pairs. Must be non-empty to disambiguate from the empty `` `` token.
    python_inline_body: ($) => token.immediate(/([^`\\]|\\.)+/),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*/,
